--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-XXXXXX", // Replace with your AdSense Publisher ID
+            google_ad_client: "pub-3438878854052080", // Replace with your AdSense Publisher ID
             enable_page_level_ads: true
         });
     </script>
