--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-3438878854052080", // Replace with your AdSense Publisher ID
+            google_ad_client: "ca-pub-3438878854052080",
             enable_page_level_ads: true
         });
     </script>
@@ -62,7 +62,7 @@
                 <!-- Google AdSense Ad Code -->
                 <ins class="adsbygoogle"
                      style="display:block"
-                     data-ad-client="ca-pub-3438878854052080"  <!-- Replace with your AdSense Publisher ID -->
+                     data-ad-client="ca-pub-3438878854052080" 
                      data-ad-slot="YYYYYY"
                      data-ad-format="auto"></ins>
                 <script>
